--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,9 @@
   },
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "scripts": {
+    "start": "node ./src/app.js",
+    "dev": "npx nodemon ./src/app.js"
   }
 }
