--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,30 @@
 
 services:
-  # los servicios db y admirer se implementaron tomando
+  # los servicios db y adminer se implementaron tomando
   # como referencia al ejemplo compose.yaml de https://hub.docker.com/_/postgres
 
-  database:
+  db:
     image: postgres:18-alpine3.22
     restart: always
-    environment:
-      # usuario: postgres
-      POSTGRES_PASSWORD: contra1234
-      POSTGRES_DB: imagoDB
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - type: tmpfs
         target: /dev/shm
         tmpfs:
           size: 134217728 # 128MB
+    environment:
+      # usuario: postgres
+      POSTGRES_PASSWORD: contra1234
+      POSTGRES_DB: imagoDB
 
   adminer:
     image: adminer
     restart: always
     ports:
       - "8080:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: database
+      ADMINER_DEFAULT_DB: imagoDB
+      ADMINER_DESIGN: dark
+    volumes:
+      - ./adminer/designs/adminer-dark.css:/var/www/html/designs/dark/adminer.css:ro
