--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,23 +13,28 @@ services:
         tmpfs:
           size: 134217728 # 128MB
     environment:
-      # usuario: postgres
-      POSTGRES_PASSWORD: contra1234
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 1234
       POSTGRES_DB: imagoDB
 
   adminer:
+    depends_on:
+      - db
     image: adminer
     restart: always
     ports:
       - "8080:8080"
     environment:
-      ADMINER_DEFAULT_SERVER: database
+      ADMINER_DEFAULT_DRIVER: pgsql
+      ADMINER_DEFAULT_SERVER: db
       ADMINER_DEFAULT_DB: imagoDB
       ADMINER_DESIGN: dark
     volumes:
-      - ./adminer/designs/adminer-dark.css:/var/www/html/designs/dark/adminer.css:ro
+      - ./adminer/designs/adminer-dark.css:/var/www/html/designs/dark/adminer.css
 
   api:
+    depends_on:
+      - db
     build: ./api/
     ports:
       - "3000:3000"
