--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   },
   "scripts": {
     "start": "node ./src/app.js",
