--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,4 +40,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: "postgres://admin:1234@localhost:5432/imagoDB"
+      DATABASE_USERNAME: "admin"
+      DATABASE_PASSWORD: "1234"
+      DATABASE_DATABASE: "imagoDB"
+      DATABASE_HOST: "db"
