--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.1.12"
   },
   "scripts": {
     "start": "node ./src/app.js",
