Se mergeo docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: imagoDB
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U admin -d imagoDB" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   adminer:
     depends_on:
@@ -44,3 +50,6 @@ services:
       DATABASE_PASSWORD: "1234"
       DATABASE_DATABASE: "imagoDB"
       DATABASE_HOST: "db"
+      DATABASE_PORT: "5432"
+      NODE_ENV: "development"
+      PORT: "3000"
