--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,10 +53,14 @@ services:
       DATABASE_PORT: "5432"
       NODE_ENV: "development"
       PORT: "3000"
+
   front:
+    depends_on:
+      - api
     image: nginx:stable-alpine
     restart: always
     ports:
       - "80:80"
     volumes:
       - ./front:/usr/share/nginx/html:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
