--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: postgres:18-alpine3.22
     restart: always
     volumes:
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:Z
       - type: tmpfs
         target: /dev/shm
         tmpfs:
@@ -36,7 +36,7 @@ services:
       ADMINER_DEFAULT_DB: imagoDB
       ADMINER_DESIGN: dark
     volumes:
-      - ./adminer/designs/adminer-dark.css:/var/www/html/designs/dark/adminer.css
+      - ./adminer/designs/adminer-dark.css:/var/www/html/designs/dark/adminer.css:Z
 
   api:
     depends_on:
@@ -62,5 +62,5 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./front:/usr/share/nginx/html:ro
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./front:/usr/share/nginx/html:ro,Z
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro,Z
