--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,8 +1,13 @@
 FROM nginx:stable-alpine
 
-# elimina config default y copia la configuración de nginx
+# instalar envsubst
+RUN apk add --no-cache gettext
+
+# elimina config default
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
+# usar template en lugar de conf directo
+COPY ./nginx/default.conf.template /etc/nginx/templates/default.conf.template
 
 # copia el front
 COPY ./front /usr/share/nginx/html
@@ -12,4 +17,7 @@ RUN chmod -R 755 /usr/share/nginx/html
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+# generar config final con envsubst y arrancar nginx
+# esto se hace para poder "cargar" variables de entorno en el front
+CMD envsubst '$API_URL' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf \
+ && nginx -g 'daemon off;'
