--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,29 +2,19 @@
 server {
     listen 80;
 
-    server_name _;
-
     # Carpeta del front
     root /usr/share/nginx/html;
     index index.html;
 
-    # Archivos estáticos y HTML normales
-    location / {
-        try_files $uri $uri/ =404;
-    }
-
-    # Proxy a la API
+    # Redirección de la API
     location /api/ {
-        proxy_pass ${API_URL};
-        proxy_http_version 1.1;
-
+        proxy_pass http://api:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 30s;
-        proxy_read_timeout 30s;
+    # Archivos estáticos y HTML normales
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
