Se movio default.conf.template a ./nginx

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -3,14 +3,14 @@ FROM nginx:stable-alpine
 # instalar envsubst
 RUN apk add --no-cache gettext
 
-# elimina config default
+# eliminar config default
 RUN rm /etc/nginx/conf.d/default.conf
 
-# usar template en lugar de conf directo
+# copiar template de nginx desde front/nginx
 COPY ./nginx/default.conf.template /etc/nginx/templates/default.conf.template
 
-# copia el front
-COPY ./front /usr/share/nginx/html
+# copiar todo el front (raíz del contexto)
+COPY . /usr/share/nginx/html
 
 # permisos
 RUN chmod -R 755 /usr/share/nginx/html
@@ -19,5 +19,4 @@ EXPOSE 80
 
 # generar config final con envsubst y arrancar nginx
 # esto se hace para poder "cargar" variables de entorno en el front
-CMD envsubst '$API_URL' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf \
- && nginx -g 'daemon off;'
+CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
