--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,22 +1,27 @@
+# Código generado usando ChatGPT
 FROM nginx:stable-alpine
 
-# instalar envsubst
+# Instalar envsubst
 RUN apk add --no-cache gettext
 
-# eliminar config default
+# Eliminar config default y usar template
 RUN rm /etc/nginx/conf.d/default.conf
-
-# copiar template de nginx desde front/nginx
 COPY ./nginx/default.conf.template /etc/nginx/templates/default.conf.template
 
-# copiar todo el front (raíz del contexto)
-COPY . /usr/share/nginx/html
+# Copiar template de config.js para reemplazar API_URL
+COPY ./JS/config.js.template /usr/share/nginx/html/JS/config.js.template
 
-# permisos
+# Copiar todo el front
+COPY ./front /usr/share/nginx/html
+
+# Permisos
 RUN chmod -R 755 /usr/share/nginx/html
 
 EXPOSE 80
 
-# generar config final con envsubst y arrancar nginx
-# esto se hace para poder "cargar" variables de entorno en el front
-CMD ["/bin/sh", "-c", "envsubst '${API_URL}' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
+# Generar config.js con envsubst y luego iniciar nginx
+CMD ["/bin/sh", "-c", "\
+  envsubst '\$API_URL' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && \
+  envsubst '\$API_URL' < /usr/share/nginx/html/JS/config.js.template > /usr/share/nginx/html/JS/config.js && \
+  nginx -g 'daemon off;' \
+"]
