Se configuro front para poder cargar las variables de entorno

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -11,8 +11,8 @@ COPY ./nginx/default.conf.template /etc/nginx/templates/default.conf.template
 # Copiar template de config.js para reemplazar API_URL
 COPY ./JS/config.js.template /usr/share/nginx/html/JS/config.js.template
 
-# Copiar todo el front
-COPY ./front /usr/share/nginx/html
+# Copiar todo el front (ya estamos en la raíz del proyecto front)
+COPY . /usr/share/nginx/html
 
 # Permisos
 RUN chmod -R 755 /usr/share/nginx/html
