--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,12 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "aws-sdk": "^1.18.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "pg": "^8.16.3",
     "zod": "^4.1.12"
   },
