--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "aws-sdk": "^2.1693.0",
+    "@aws-sdk/client-s3": "^3.983.0",
+    "@aws-sdk/s3-request-presigner": "^3.983.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
